--- a/app/globals.css
+++ b/app/globals.css
@@ -103,6 +103,20 @@ body:has(#menu-toggler:checked) #side-menu {
     @apply scale-x-100
 }
 
+/* details-summary tag arrow */
 summary {
     list-style: none
+}
+
+/* number input arrow */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
